# Event-Driven-Storytelling

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
benchmark/: evaluator.py  evaluator_action.py  evaluator_position.py  evaluator_relationships.py  runner.py  summerizer.py
benchmark/test_cases/0_OA/: testcase_0.json  testcase_1.json  testcase_2.json  testcase_3.json  testcase_4.json
benchmark/test_cases/1_RC/: testcase_10.json  testcase_11.json  testcase_12.json  testcase_13.json  testcase_14.json
benchmark/test_cases/2_SS/: testcase_20.json  testcase_21.json  testcase_22.json  testcase_23.json  testcase_24.json
benchmark/test_cases/3_OA_RC/: testcase_30.json  testcase_31.json  testcase_32.json  testcase_33.json  testcase_34.json
benchmark/test_cases/4_OA_SS/: testcase_40.json  (+4 more)
configs/: benchmark.yaml  demo.yaml
configs/motion_db/: chat.yaml  chat_single.yaml  drink.yaml  eat.yaml  handshake.yaml  hug.yaml  idle.yaml  sit.yaml  sit_transition_in.yaml  sit_transition_out.yaml  turn_on_record_player.yaml  use_laptop.yaml  use_microwave.yaml  vacuum_floor.yaml  walk.yaml  wave.yaml
docs/: index.html
docs/css/: styles.css
docs/js/: bulma_toggle.js
scripts/: download_hssd.py  run_benchmark.py  visualize_scene.py
src/: type.py
src/action_planning/: action_planning_module.py  llm_client.py
src/motion_synthesis/: motion_synthesis_module.py  state_manager.py  states.py
src/scene/: grid_map.py  relationships.py  scene.py  scene_graph.py
src/utils/: amass.py  inter_x.py  misc.py  polyscope.py  samp.py  smpl.py  transform.py
(+91 files in other folders)
